# Secret_App

./: CMakeLists.txt  build_windows.bat  ffigen.yaml  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  pubspec.yaml
lib/config/: app_constants.dart  env_loader.dart  supabase_config.dart
lib/config/lib/config/: app_routes.dart
lib/models/: user_model.dart
lib/providers/: auth_provider.dart
lib/screens/: chat_list_screen.dart  chat_screen.dart  file_decryption_modal.dart  file_location_modal.dart  login_screen.dart  profile_screen.dart  register_screen.dart  steganography_modal.dart  verify_screen.dart
lib/screens/lib/screens/: file_decryption_modal.dart
lib/services/: camellia_encryption.dart  crypto_auth.dart  crypto_auth_ffi.dart  crypto_auth_web.dart  crypto_service_factory.dart  encryption_service.dart  file_encryption_service.dart  hybrid_encryption_service.dart  steganography_service.dart  supabase_service.dart
lib/steganography/: steganography.c  steganography.h
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native_libs/: argon2.h  native_crypto.cpp  sha3.h
